--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,7 @@
 .container .contactinfo .box .icon {
   min-width: 45px;
   height: 45px;
-  background: rgb(76, 145, 185);
+  background: rgb(171 224 255);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -249,14 +249,12 @@ h2 {
   .container .contactinfo .box .icon {
     min-width: 40px;
     height: 40px;
-    background: rgb(76, 145, 185);
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
     font-size: 22px;
     margin: 12px;
-
   }
 }
 
